sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:5: error: '(' expected but identifier found.
    for i<-(0 to getNombreValeur()-2)
        ^AlgBubbleSort1:6: error: illegal start of simple expression
  }
  ^